// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`memoize.sql > line 7 1`] = `
[
  "create function explain_memoize(query text, hide_hitmiss bool) returns setof text
language plpgsql as
$$
declare
    ln text;
begin
    for ln in
        execute format('explain (analyze, costs off, summary off, timing off) %s',
            query)
    loop
        if hide_hitmiss = true then
                ln := regexp_replace(ln, 'Hits: 0', 'Hits: Zero');
                ln := regexp_replace(ln, 'Hits: \\d+', 'Hits: N');
                ln := regexp_replace(ln, 'Misses: 0', 'Misses: Zero');
                ln := regexp_replace(ln, 'Misses: \\d+', 'Misses: N');
        end if;
        ln := regexp_replace(ln, 'Evictions: 0', 'Evictions: Zero');
        ln := regexp_replace(ln, 'Evictions: \\d+', 'Evictions: N');
        ln := regexp_replace(ln, 'Memory Usage: \\d+', 'Memory Usage: N');
	ln := regexp_replace(ln, 'Heap Fetches: \\d+', 'Heap Fetches: N');
	ln := regexp_replace(ln, 'loops=\\d+', 'loops=N');
        return next ln;
    end loop;
end;
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "explain_memoize",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 82,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
declare
    ln text;
begin
    for ln in
        execute format('explain (analyze, costs off, summary off, timing off) %s',
            query)
    loop
        if hide_hitmiss = true then
                ln := regexp_replace(ln, 'Hits: 0', 'Hits: Zero');
                ln := regexp_replace(ln, 'Hits: \\d+', 'Hits: N');
                ln := regexp_replace(ln, 'Misses: 0', 'Misses: Zero');
                ln := regexp_replace(ln, 'Misses: \\d+', 'Misses: N');
        end if;
        ln := regexp_replace(ln, 'Evictions: 0', 'Evictions: Zero');
        ln := regexp_replace(ln, 'Evictions: \\d+', 'Evictions: N');
        ln := regexp_replace(ln, 'Memory Usage: \\d+', 'Memory Usage: N');
	ln := regexp_replace(ln, 'Heap Fetches: \\d+', 'Heap Fetches: N');
	ln := regexp_replace(ln, 'loops=\\d+', 'loops=N');
        return next ln;
    end loop;
end;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 99,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 38,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "query",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 57,
                    "names": [
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "hide_hitmiss",
                },
              },
            ],
            "returnType": {
              "location": 77,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "setof": true,
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 34 1`] = `
[
  "SET enable_hashjoin TO off",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 23,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_hashjoin",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 37 1`] = `
[
  "SELECT explain_memoize('
SELECT COUNT(*),AVG(t1.unique1) FROM tenk1 t1
INNER JOIN tenk1 t2 ON t1.unique1 = t2.twenty
WHERE t2.unique1 < 1000;', false)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 23,
                            "sval": {
                              "sval": "
SELECT COUNT(*),AVG(t1.unique1) FROM tenk1 t1
INNER JOIN tenk1 t2 ON t1.unique1 = t2.twenty
WHERE t2.unique1 < 1000;",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 144,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "explain_memoize",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 43 1`] = `
[
  "SELECT COUNT(*),AVG(t1.unique1) FROM tenk1 t1
INNER JOIN tenk1 t2 ON t1.unique1 = t2.twenty
WHERE t2.unique1 < 1000",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t1",
                      },
                      "inh": true,
                      "location": 37,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t1",
                              },
                            },
                            {
                              "String": {
                                "sval": "unique1",
                              },
                            },
                          ],
                          "location": 69,
                        },
                      },
                      "location": 80,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t2",
                              },
                            },
                            {
                              "String": {
                                "sval": "twenty",
                              },
                            },
                          ],
                          "location": 82,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t2",
                      },
                      "inh": true,
                      "location": 57,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "t1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "unique1",
                                },
                              },
                            ],
                            "location": 20,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "avg",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t2",
                        },
                      },
                      {
                        "String": {
                          "sval": "unique1",
                        },
                      },
                    ],
                    "location": 98,
                  },
                },
                "location": 109,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1000,
                    },
                    "location": 111,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 55 1`] = `
[
  "SELECT COUNT(*),AVG(t2.unique1) FROM tenk1 t1,
LATERAL (SELECT t2.unique1 FROM tenk1 t2
         WHERE t1.twenty = t2.unique1 OFFSET 0) t2
WHERE t1.unique1 < 1000",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "t1",
                  },
                  "inh": true,
                  "location": 37,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "t2",
                  },
                  "lateral": true,
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeVar": {
                            "alias": {
                              "aliasname": "t2",
                            },
                            "inh": true,
                            "location": 79,
                            "relname": "tenk1",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOffset": {
                        "A_Const": {
                          "ival": {},
                          "location": 133,
                        },
                      },
                      "limitOption": "LIMIT_OPTION_COUNT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 63,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "t2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "unique1",
                                    },
                                  },
                                ],
                                "location": 63,
                              },
                            },
                          },
                        },
                      ],
                      "whereClause": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t1",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "twenty",
                                  },
                                },
                              ],
                              "location": 103,
                            },
                          },
                          "location": 113,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t2",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 115,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "t2",
                                },
                              },
                              {
                                "String": {
                                  "sval": "unique1",
                                },
                              },
                            ],
                            "location": 20,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "avg",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t1",
                        },
                      },
                      {
                        "String": {
                          "sval": "unique1",
                        },
                      },
                    ],
                    "location": 145,
                  },
                },
                "location": 156,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1000,
                    },
                    "location": 158,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 61 1`] = `
[
  "SET work_mem TO '64kB'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 16,
                  "sval": {
                    "sval": "64kB",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "work_mem",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 72 1`] = `
[
  "CREATE TABLE flt (f float)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "flt",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f",
                  "is_local": true,
                  "location": 18,
                  "typeName": {
                    "location": 20,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "float8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 77 1`] = `
[
  "SET enable_seqscan TO off",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 22,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 87 1`] = `
[
  "DROP TABLE flt",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "flt",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 91 1`] = `
[
  "CREATE TABLE strtest (n name, t text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "strtest",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "n",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "t",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 96 1`] = `
[
  "INSERT INTO strtest SELECT * FROM strtest",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "strtest",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 34,
                      "relname": "strtest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 107 1`] = `
[
  "DROP TABLE strtest",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "strtest",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 110 1`] = `
[
  "SET enable_partitionwise_join TO on",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 33,
                  "sval": {
                    "sval": "on",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_partitionwise_join",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 112 1`] = `
[
  "CREATE TABLE prt (a int) PARTITION BY RANGE(a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 25,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 44,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_RANGE",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "prt",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 18,
                  "typeName": {
                    "location": 20,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 132 1`] = `
[
  "DROP TABLE prt",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "prt",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 134 1`] = `
[
  "RESET enable_partitionwise_join",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "enable_partitionwise_join",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 140 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT unique1 FROM tenk1 t0
WHERE unique1 < 3
  AND EXISTS (
	SELECT 1 FROM tenk1 t1
	INNER JOIN tenk1 t2 ON t1.unique1 = t2.hundred
	WHERE t0.ten = t1.twenty AND t0.two <> t2.four OFFSET 0)",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t0",
                      },
                      "inh": true,
                      "location": 40,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "unique1",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 55,
                            },
                          },
                          "location": 63,
                          "name": [
                            {
                              "String": {
                                "sval": "<",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 3,
                              },
                              "location": 65,
                            },
                          },
                        },
                      },
                      {
                        "SubLink": {
                          "location": 73,
                          "subLinkType": "EXISTS_SUBLINK",
                          "subselect": {
                            "SelectStmt": {
                              "fromClause": [
                                {
                                  "JoinExpr": {
                                    "jointype": "JOIN_INNER",
                                    "larg": {
                                      "RangeVar": {
                                        "alias": {
                                          "aliasname": "t1",
                                        },
                                        "inh": true,
                                        "location": 97,
                                        "relname": "tenk1",
                                        "relpersistence": "p",
                                      },
                                    },
                                    "quals": {
                                      "A_Expr": {
                                        "kind": "AEXPR_OP",
                                        "lexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "t1",
                                                },
                                              },
                                              {
                                                "String": {
                                                  "sval": "unique1",
                                                },
                                              },
                                            ],
                                            "location": 130,
                                          },
                                        },
                                        "location": 141,
                                        "name": [
                                          {
                                            "String": {
                                              "sval": "=",
                                            },
                                          },
                                        ],
                                        "rexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "t2",
                                                },
                                              },
                                              {
                                                "String": {
                                                  "sval": "hundred",
                                                },
                                              },
                                            ],
                                            "location": 143,
                                          },
                                        },
                                      },
                                    },
                                    "rarg": {
                                      "RangeVar": {
                                        "alias": {
                                          "aliasname": "t2",
                                        },
                                        "inh": true,
                                        "location": 118,
                                        "relname": "tenk1",
                                        "relpersistence": "p",
                                      },
                                    },
                                  },
                                },
                              ],
                              "limitOffset": {
                                "A_Const": {
                                  "ival": {},
                                  "location": 209,
                                },
                              },
                              "limitOption": "LIMIT_OPTION_COUNT",
                              "op": "SETOP_NONE",
                              "targetList": [
                                {
                                  "ResTarget": {
                                    "location": 90,
                                    "val": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 90,
                                      },
                                    },
                                  },
                                },
                              ],
                              "whereClause": {
                                "BoolExpr": {
                                  "args": [
                                    {
                                      "A_Expr": {
                                        "kind": "AEXPR_OP",
                                        "lexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "t0",
                                                },
                                              },
                                              {
                                                "String": {
                                                  "sval": "ten",
                                                },
                                              },
                                            ],
                                            "location": 161,
                                          },
                                        },
                                        "location": 168,
                                        "name": [
                                          {
                                            "String": {
                                              "sval": "=",
                                            },
                                          },
                                        ],
                                        "rexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "t1",
                                                },
                                              },
                                              {
                                                "String": {
                                                  "sval": "twenty",
                                                },
                                              },
                                            ],
                                            "location": 170,
                                          },
                                        },
                                      },
                                    },
                                    {
                                      "A_Expr": {
                                        "kind": "AEXPR_OP",
                                        "lexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "t0",
                                                },
                                              },
                                              {
                                                "String": {
                                                  "sval": "two",
                                                },
                                              },
                                            ],
                                            "location": 184,
                                          },
                                        },
                                        "location": 191,
                                        "name": [
                                          {
                                            "String": {
                                              "sval": "<>",
                                            },
                                          },
                                        ],
                                        "rexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "t2",
                                                },
                                              },
                                              {
                                                "String": {
                                                  "sval": "four",
                                                },
                                              },
                                            ],
                                            "location": 194,
                                          },
                                        },
                                      },
                                    },
                                  ],
                                  "boolop": "AND_EXPR",
                                  "location": 180,
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "AND_EXPR",
                    "location": 69,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 149 1`] = `
[
  "SELECT unique1 FROM tenk1 t0
WHERE unique1 < 3
  AND EXISTS (
	SELECT 1 FROM tenk1 t1
	INNER JOIN tenk1 t2 ON t1.unique1 = t2.hundred
	WHERE t0.ten = t1.twenty AND t0.two <> t2.four OFFSET 0)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "t0",
                  },
                  "inh": true,
                  "location": 20,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "unique1",
                              },
                            },
                          ],
                          "location": 35,
                        },
                      },
                      "location": 43,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 45,
                        },
                      },
                    },
                  },
                  {
                    "SubLink": {
                      "location": 53,
                      "subLinkType": "EXISTS_SUBLINK",
                      "subselect": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "JoinExpr": {
                                "jointype": "JOIN_INNER",
                                "larg": {
                                  "RangeVar": {
                                    "alias": {
                                      "aliasname": "t1",
                                    },
                                    "inh": true,
                                    "location": 77,
                                    "relname": "tenk1",
                                    "relpersistence": "p",
                                  },
                                },
                                "quals": {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "t1",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "unique1",
                                            },
                                          },
                                        ],
                                        "location": 110,
                                      },
                                    },
                                    "location": 121,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "=",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "t2",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "hundred",
                                            },
                                          },
                                        ],
                                        "location": 123,
                                      },
                                    },
                                  },
                                },
                                "rarg": {
                                  "RangeVar": {
                                    "alias": {
                                      "aliasname": "t2",
                                    },
                                    "inh": true,
                                    "location": 98,
                                    "relname": "tenk1",
                                    "relpersistence": "p",
                                  },
                                },
                              },
                            },
                          ],
                          "limitOffset": {
                            "A_Const": {
                              "ival": {},
                              "location": 189,
                            },
                          },
                          "limitOption": "LIMIT_OPTION_COUNT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 70,
                                "val": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 70,
                                  },
                                },
                              },
                            },
                          ],
                          "whereClause": {
                            "BoolExpr": {
                              "args": [
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "t0",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "ten",
                                            },
                                          },
                                        ],
                                        "location": 141,
                                      },
                                    },
                                    "location": 148,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "=",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "t1",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "twenty",
                                            },
                                          },
                                        ],
                                        "location": 150,
                                      },
                                    },
                                  },
                                },
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "t0",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "two",
                                            },
                                          },
                                        ],
                                        "location": 164,
                                      },
                                    },
                                    "location": 171,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "<>",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "t2",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "four",
                                            },
                                          },
                                        ],
                                        "location": 174,
                                      },
                                    },
                                  },
                                },
                              ],
                              "boolop": "AND_EXPR",
                              "location": 160,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 49,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 156 1`] = `
[
  "RESET enable_seqscan",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 164 1`] = `
[
  "SET min_parallel_table_scan_size TO 0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 36,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "min_parallel_table_scan_size",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 170 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT COUNT(*),AVG(t2.unique1) FROM tenk1 t1,
LATERAL (SELECT t2.unique1 FROM tenk1 t2 WHERE t1.twenty = t2.unique1) t2
WHERE t1.unique1 < 1000",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t1",
                      },
                      "inh": true,
                      "location": 57,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                  {
                    "RangeSubselect": {
                      "alias": {
                        "aliasname": "t2",
                      },
                      "lateral": true,
                      "subquery": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "alias": {
                                  "aliasname": "t2",
                                },
                                "inh": true,
                                "location": 99,
                                "relname": "tenk1",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 83,
                                "val": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "t2",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "unique1",
                                        },
                                      },
                                    ],
                                    "location": 83,
                                  },
                                },
                              },
                            },
                          ],
                          "whereClause": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "t1",
                                      },
                                    },
                                    {
                                      "String": {
                                        "sval": "twenty",
                                      },
                                    },
                                  ],
                                  "location": 114,
                                },
                              },
                              "location": 124,
                              "name": [
                                {
                                  "String": {
                                    "sval": "=",
                                  },
                                },
                              ],
                              "rexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "t2",
                                      },
                                    },
                                    {
                                      "String": {
                                        "sval": "unique1",
                                      },
                                    },
                                  ],
                                  "location": 126,
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "t2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "unique1",
                                    },
                                  },
                                ],
                                "location": 40,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "avg",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "t1",
                            },
                          },
                          {
                            "String": {
                              "sval": "unique1",
                            },
                          },
                        ],
                        "location": 147,
                      },
                    },
                    "location": 158,
                    "name": [
                      {
                        "String": {
                          "sval": "<",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1000,
                        },
                        "location": 160,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 176 1`] = `
[
  "SELECT COUNT(*),AVG(t2.unique1) FROM tenk1 t1,
LATERAL (SELECT t2.unique1 FROM tenk1 t2 WHERE t1.twenty = t2.unique1) t2
WHERE t1.unique1 < 1000",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "t1",
                  },
                  "inh": true,
                  "location": 37,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "t2",
                  },
                  "lateral": true,
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeVar": {
                            "alias": {
                              "aliasname": "t2",
                            },
                            "inh": true,
                            "location": 79,
                            "relname": "tenk1",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 63,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "t2",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "unique1",
                                    },
                                  },
                                ],
                                "location": 63,
                              },
                            },
                          },
                        },
                      ],
                      "whereClause": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t1",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "twenty",
                                  },
                                },
                              ],
                              "location": 94,
                            },
                          },
                          "location": 104,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t2",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "unique1",
                                  },
                                },
                              ],
                              "location": 106,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "t2",
                                },
                              },
                              {
                                "String": {
                                  "sval": "unique1",
                                },
                              },
                            ],
                            "location": 20,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "avg",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t1",
                        },
                      },
                      {
                        "String": {
                          "sval": "unique1",
                        },
                      },
                    ],
                    "location": 127,
                  },
                },
                "location": 138,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1000,
                    },
                    "location": 140,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`memoize.sql > line 180 1`] = `
[
  "RESET max_parallel_workers_per_gather",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "max_parallel_workers_per_gather",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
